# vehicle_kinematics

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
data/: input_coordinates.txt
docs/: rotation_convention.tex
src/vehicle_kinematics/: __init__.py  heading.py  kinematics.py  models.py  parser.py  pipeline.py  plotting.py  projection.py
tests/: test_heading.py  test_parser.py  test_pipeline.py  test_projection.py
